--- a/css/about.css
+++ b/css/about.css
@@ -1,22 +1,22 @@
-.about__container {
-    margin: 0 auto;
-    padding: 30px 0;
+.panel-about {
+    margin-top: 20px;
     text-align: center;
-    width: 90%;
+} 
+
+.panel-about .title {
+
+    font-size: 40px;
+    margin-bottom: 16px;
 }
 
-.about__title {
-    font-size: 2.5em;
-    margin-bottom: 20px;
+.panel-about .subtitle {
+    
+    font-size: 24px;
+    margin-bottom: 16px;
 }
 
-.about__subtitle {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-}
+.panel-about .about-description {
 
-.about__description {
-    font-size: 1.125em;
-    line-height: 1.8;
-    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 35px;
 }
